--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -33,13 +33,13 @@
         <p id="ex2" class="first-example example inline">E ok pentru ce am eu nevoie dar se poate mai bine.</p> <button id="ex2b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
     </div>
     <div>
-        <p id="ex3" class="first-example example inline">E o husa ieftină și funcțională dar nu vă așteptați la ceva wow.</p> <button id="ex3b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
+        <p id="ex3" class="first-example example inline">Se aude cam nasol dar in rest e bun pentru preț.</p> <button id="ex3b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
     </div>
     <div>
-        <p id="ex4" class="first-example example inline">Cam slăbuț, mă așteptam la mai mult. Material de proastă calitate.</p> <button id="ex4b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
+        <p id="ex4" class="first-example example inline">Cam slăbuț, mă așteptam la mai mult. Materialul se deteriorează rapid.</p> <button id="ex4b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
     </div>
     <div>
-        <p id="ex5" class="first-example example inline">Nu recomand. Calitate foarte slabă. S-a deteriorat în mai puțin de o saptămână de când o am pe telefon.</p> <button id="ex5b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
+        <p id="ex5" class="first-example example inline">Nu recomand deloc. Calitate foarte slabă. S-a deteriorat în mai puțin de o saptămână de când o am pe telefon.</p> <button id="ex5b" class=" first-example btn btn-primary inline align-top" type="button">Try example</button>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
